# vlcb

./: .clangd  .gitignore  .gitmodules  BuildOptions.cmake  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  vlcbConfig.cmake.in
archive/: macros.h  option.h
docs/html/: adapter_8c.html  adapter_8c.js  adapter_8c__incl.md5  adapter_8c_a74b46c574ae26bb9f527b6b157cb644e_icgraph.md5  adapter_8c_source.html  adapter_8h.html  adapter_8h.js  adapter_8h__dep__incl.md5  adapter_8h__incl.md5  adapter_8h_a01fcc81840085a0c1381613c768bb85b_icgraph.md5  adapter_8h_source.html  addr_8c.html  addr_8c.js  addr_8c__incl.md5  addr_8c_a01a3ff7e0be059c4ab66d240255e13b6_icgraph.md5  addr_8c_a0ab65595519fc6fe5e4b49b6f0fe0ee0_cgraph.md5  addr_8c_a572dd582301bafe582b697727ab12387_cgraph.md5  addr_8c_source.html  addr_8h.html  addr_8h.js  addr_8h__dep__incl.md5  addr_8h__incl.md5  addr_8h_a79203c23d41737d8bd9509c1e05a7026_cgraph.md5  addr_8h_a83d3f92953278599a373c60afe6806c6_icgraph.md5  addr_8h_source.html  annotated.html  annotated_dup.js  can_8h.html  can_8h.js  can_8h__incl.md5  can_8h_source.html  can__id__is__valid_8c.html  can__id__is__valid_8c.js  can__id__is__valid_8c__incl.md5  can__id__is__valid_8c_aba3ce98e83c4691c65ebc79eadde51a2_icgraph.md5  can__id__is__valid_8c_source.html  can__id__new_8c.html  can__id__new_8c.js  can__id__new_8c__incl.md5  can__id__new_8c_a96585647cdbba9c7da0b3ab571b37c77_cgraph.md5  (+1187 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  (+44 more)
example/: CMakeLists.txt  adapters.c
example/adapter/: dummy_adapter.c
example/net/: simple.c
examples/avr_net_only/: main.c
lib/: CMakeLists.txt  vlcb.h
lib/defs/: defs.h  node.h  vlcb_defs.h
lib/module/: module.h  ui.h
lib/module/service/: can.h
lib/net/: net.h
lib/net/adapter/: adapter.h
lib/net/adapter/can/: packet.h  packet_parse.h
lib/net/iface/: iface.h
lib/net/packet/: datagram.h  vlcb.h
lib/net/socket/: datagram.h  socket.h
lib/platform/: log.h  platform.h  time.h
lib/platform/driver/: led.h  switch.h
lib/src/defs/: can.c  node.c  opcode.c
lib/src/module/: module.c
lib/src/net/adapter/: adapter.c
lib/src/net/adapter/can/: packet_parse.c
lib/src/net/iface/: iface.c  iface_can.c  iface_can.h  iface_vlcb.c  iface_vlcb.h
lib/src/net/packet/: datagram.c  vlcb.c
lib/src/net/socket/: datagram.c  socket.c
lib/src/net/storage/: packet_buf.c
lib/src/platform/driver/: led.c
modules/: CMakeLists.txt
modules/common/: CMakeLists.txt
modules/common/inc/vlcb/common/: can.h  dcc.h  event.h  manufacturer.h  module.h  net.h  node.h  opcode.h  processor.h  time.h  vlcb_defs.h
modules/common/inc/vlcb/common/manufacturer/: merg.h  rocrail.h  spectrum.h  sprog.h  syspixie.h
modules/common/src/: can.c  node.c
modules/common/src/can/: CMakeLists.txt  can_id_is_valid.c  can_id_new.c  can_is_prio_valid.c  can_prio_from_byte.c  can_prio_from_opc.c
modules/common/src/node/: CMakeLists.txt  node_new_addr.c  node_new_addr_from_bytes.c  node_new_addr_unchecked.c  node_new_number.c  node_new_number_from_bytes.c  node_new_number_unchecked.c
modules/common/src/opcode/: CMakeLists.txt  opcode_from_byte.c
modules/module/: CMakeLists.txt
modules/module/inc/vlcb/: module.h
modules/module/inc/vlcb/module/: module_types.h  param.h  state.h  ui.h
modules/module/inc/vlcb/module/service/: can.h
modules/module/src/: module.c  module.h  param.c  param.h  state_machine.c  state_machine.h
modules/net/: CMakeLists.txt
modules/net/inc/vlcb/: net.h
modules/net/inc/vlcb/net/: adapter.h  addr.h  iface.h  message.h  socket.h  wire.h
modules/net/inc/vlcb/net/adapter/can/: packet.h  packet_parse.h
modules/net/inc/vlcb/net/message/: data.h  serialization.h
modules/net/inc/vlcb/net/packet/: data.h  datagram.h  serialization.h  vlcb.h
modules/net/inc/vlcb/net/packet/datagram/: dcc.h  event.h  general.h  module.h
modules/net/inc/vlcb/net/socket/: datagram.h
modules/net/inc/vlcb/net/storage/: packet_buf.h
modules/net/inc/vlcb/net/wire/: can.h
modules/net/src/: addr.c
modules/net/src/adapter/: CMakeLists.txt  adapter.c
modules/net/src/adapter/can/: CMakeLists.txt  packet_parse.c
modules/net/src/iface/: CMakeLists.txt  iface.c  iface_can.c  iface_can.h  iface_can_svc.c  iface_vlcb.c  iface_vlcb.h
modules/net/src/packet/: CMakeLists.txt  datagram.c  vlcb.c
modules/net/src/packet/datagram/: CMakeLists.txt
modules/net/src/packet/datagram/module/: CMakeLists.txt  release_node_num_deserialize.c  release_node_num_serialize.c
modules/net/src/socket/: CMakeLists.txt  datagram.c  socket.c
modules/net/src/storage/: CMakeLists.txt  packet_buf.c
modules/platform/: CMakeLists.txt
modules/platform/inc/vlcb/platform/: endian.h  error.h  interface.h  log.h  platform.h  time.h
modules/platform/inc/vlcb/platform/driver/: led.h  switch.h
modules/platform/src/: log.c
modules/platform/src/arch/generic/: time.c
modules/platform/src/driver/: led.c
shared/: error.h  interface.h  log.c
src/: vlcb.h  vlcb_defs.h
src/defs/: can.c  can.h  node.c  node.h  opcode.c  opcode.h  vlcb_defs.h
src/module/: module.h  state.h
src/network/: network.h
src/network/dev/: dev.c  dev.h
src/network/iface/: iface.c  iface.h  iface_can.c  iface_can.h  (+2 more)
src/shared/: error.c  error.h  interface.h  log.c  log.h
template/avr/: CMakeLists.txt  README.md
template/avr/cmake/: avr-gcc-toolchain.cmake
template/avr/src/: main.c
test/: CMakeLists.txt
test/defs/: can.c  node.c
test/module/: README.md
test/net/adapter/can/: CMakeLists.txt  packet_parse.c
tool/codegen/: README.md
tool/generate/: todo.md
tool/refactor/: go.mod  go.sum  split_sources.go
(+33 files in other folders)
